Update menu items with side information and community service section
- Added side descriptions to Lone Ranger (includes pint of beans)
- Added side descriptions to Maverick (includes pint of beans)
- Added side descriptions to Bandit's Bounty (includes pint of beans and corn)
- Added 'Giving Back to Our Community' section highlighting homeless feeding events
- Updated corn menu item to use pot-of-corn.png image
- Cleaned up testimonials section text

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
                 <!-- Corn -->
                 <div class="bg-white rounded-lg overflow-hidden shadow-md menu-item">
-                    <img src="assets/images/menu/corn.png" alt="Roasted Corn" class="w-full h-48 object-cover">
+                    <img src="pot-of-corn.png" alt="Roasted Corn" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <div class="flex justify-between items-center mb-2">
                             <h4 class="text-xl font-bold">Corn</h4>
@@ -197,6 +197,7 @@
                             <h4 class="text-xl font-bold">Lone Ranger</h4>
                             <span class="text-lg font-semibold bbq-primary-text">$40</span>
                         </div>
+                        <p class="text-gray-600 text-sm mb-3">Includes a pint of beans</p>
                         <button class="w-full bg-red-600 text-white px-4 py-2 rounded-md font-medium hover:bg-red-700 transition-colors add-to-order-btn" 
                                 data-name="Lone Ranger" 
                                 data-price="40">
@@ -212,6 +213,7 @@
                             <h4 class="text-xl font-bold">Maverick</h4>
                             <span class="text-lg font-semibold bbq-primary-text">$60</span>
                         </div>
+                        <p class="text-gray-600 text-sm mb-3">Includes a pint of beans</p>
                         <button class="w-full bg-red-600 text-white px-4 py-2 rounded-md font-medium hover:bg-red-700 transition-colors add-to-order-btn" 
                                 data-name="Maverick" 
                                 data-price="60">
@@ -227,6 +229,7 @@
                             <h4 class="text-xl font-bold">Bandit's Bounty</h4>
                             <span class="text-lg font-semibold bbq-primary-text">$110</span>
                         </div>
+                        <p class="text-gray-600 text-sm mb-3">Includes a pint of beans and a pint of corn</p>
                         <button class="w-full bg-red-600 text-white px-4 py-2 rounded-md font-medium hover:bg-red-700 transition-colors add-to-order-btn" 
                                 data-name="Bandit's Bounty" 
                                 data-price="110">
@@ -271,13 +274,17 @@
                     </video>
                 </div>
                 
-                <!-- Customer Images -->
+                <!-- Community Service Images -->
+                <div class="mb-8">
+                    <h3 class="text-2xl font-bold text-center mb-4 bbq-secondary-text">Giving Back to Our Community</h3>
+                    <p class="text-gray-700 text-center mb-6">These photos are from one of our community events where we fed the homeless. At The Pitmaster's Secret, we believe in sharing our blessings and making sure everyone in our community gets a good meal.</p>
+                </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-10">
                     <div class="rounded-lg overflow-hidden shadow-lg">
-                        <img src="photo_1_2025-08-23_08-40-03.jpg" alt="Happy Customer 1" class="w-full h-64 object-cover">
+                        <img src="photo_1_2025-08-23_08-40-03.jpg" alt="Community Event - Feeding the Homeless" class="w-full h-64 object-cover">
                     </div>
                     <div class="rounded-lg overflow-hidden shadow-lg">
-                        <img src="photo_2_2025-08-23_08-40-03.jpg" alt="Happy Customer 2" class="w-full h-64 object-cover">
+                        <img src="photo_2_2025-08-23_08-40-03.jpg" alt="Community Event - Feeding the Homeless" class="w-full h-64 object-cover">
                     </div>
                 </div>
             </div>
